--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ members = ["packages/*"]
 
 [workspace.dependencies]
 attune = { path = "packages/attune" }
+attune-macros = { path = "packages/attune-macros" }
 
 aws-config = "1.6.1"
 aws-credential-types = "1.2.3"
 aws-sdk-s3 = "1.82.0"
 aws-sigv4 = "1.3.3"
 axum = { version = "0.8.3", features = ["macros", "multipart"] }
+axum-test = { version = "17.3.0", features = ["all"] }
 base64 = "0.22.1"
 bon = "3.6.5"
 bytes = "1.10.1"
@@ -23,6 +25,7 @@ gpgme = "0.11.0"
 hex = "0.4.3"
 http = "1.3.1"
 inquire = "0.7.5"
+itertools = "0.14.0"
 md-5 = "0.10.6"
 percent-encoding = "2.3.1"
 pgp = "0.16.0"
